--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-scripts": "4.0.3",
+    "use-position": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.20",
+    "@types/use-position": "0.0.0",
     "typescript": "^4.4.3"
   }
 }
