--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "use-position": "^1.0.0",
     "web-vitals": "^1.1.2"
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.20",
+    "@types/react-router-dom": "^5.3.2",
     "@types/use-position": "0.0.0",
     "typescript": "^4.4.3"
   }
