--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "mongoose": "^6.0.12",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
     "use-local-storage": "^2.2.5",
     "use-position": "^1.0.0",
     "web-vitals": "^1.1.2"
@@ -51,8 +53,6 @@
     "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.20",
     "@types/react-router-dom": "^5.3.2",
-    "@types/use-position": "0.0.0",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.2"
+    "@types/use-position": "0.0.0"
   }
 }
