--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "refresh",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "14.x"
+    "node": "14.x",
+    "npm": "6.x"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
