--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/js-cookie": "^3.0.1",
     "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.20",
     "@types/react-router-dom": "^5.3.2",
