--- a/package.json
+++ b/package.json
@@ -60,6 +60,11 @@
     "@types/leaflet": "^1.7.5",
     "@types/react": "^17.0.20",
     "@types/react-router-dom": "^5.3.2",
-    "@types/use-position": "0.0.0"
+    "@types/use-position": "0.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-plugin-react": "^7.27.1"
   }
 }
