--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "nodemon": "^2.0.15",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.2",
@@ -65,6 +67,9 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.2",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.27.1",
+    "prettier": "2.5.1"
   }
 }
