--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
             "jsx": true
         },
         "ecmaVersion": 12,
-        "project": ["tsconfig.json"],
+        "files": ["*.ts", "*.jsx"],
+        "project": ["./tsconfig.json"],
         "sourceType": "module"
     },
     "plugins": ["react", "@typescript-eslint"],
